Release 2.39.1

Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.39.1 - March ??, 2010




2.39.0 - February 28, 2010

    Removed support for the following Prolog compilers: ALS Prolog, Amzi!
    Prolog, BinProlog, GNU Prolog, IF/Prolog, JIProlog, K-Prolog, LPA
    MacProlog, LPA WinProlog, MasterProlog, Open Prolog, Prolog II+, and
    Quintus Prolog. Only Amzi! Prolog, GNU Prolog, and Quintus Prolog seem
    to be actively maintained. Amzi! Prolog ignores the official and de
    facto Prolog standards. GNU Prolog is currently missing crucial support
    for the standard directive multifile/1. Quintus Prolog is superseded by
    SICStus Prolog (and required hacks to the Logtalk compiler that rendered
    it incompatible with all the other Prolog compilers).

    Removed support for all Prolog compilers that don't support the ISO Prolog
    standard directive multifile/1. Removed the "multifile_directive" config
    flag from the config files of supported Prolog compilers.

    Reintroduced parametric categories. Changed semantics of the parameter/2
    built-in execution-context method when used in category predicates to
    access the category parameters instead of the parameters of the object
    importing the category. This change provides safer and more robust use
    of parameter/2 calls in categories. 

    Improved compile-time error-checking of calls to the parameter/2 built-in
    execution-context method

    Removed the meta-predicate compilation safety rule that required the
    number of normal arguments to be equal or greater than the number of
    extra arguments required by a closure. This overly restrictive rule