@@ -15,7 +15,8 @@ RELEASE NOTES
 
 2.39.1 - March ??, 2010
 
-
+    Updated the SWI-Prolog and YAP config files in order to recognize and
+    compile the proprietary directive create_prolog_flag/3.
 
 
 2.39.0 - February 28, 2010
